app/assets/stylesheets/messages.css
.avatar-img {
    height: 45px;
    border-radius: 5px;
}

.messagesArea {
    position: relative;
    background-color: white;
    left: 220px;
    height: 100%;
    overflow-x: hidden;
    overflow-y: scroll;
    right: -50px;
    display: flex;
    max-height: 100%;
    flex-direction: column;
}

.messages-container {
    position: fixed;
    bottom: 0;
    right: inherit;
    left: inherit;
    padding: 25px;
    display: flex;
    max-height: 100%;
    flex-direction: column;
}

.newMessageForm {
    margin-top: 25px;
}

.message-nav {
    background: #fff;
    box-shadow: 0 1px 0 rgba(0,0,0,.1);
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    height: 50px;
    left: 0;
    position: -webkit-sticky;
    position: sticky;
    right: 0;
    z-index: 200;
    overflow-x: hidden;
}

#header-title {
    margin-left: 20px;
    margin-top: 10px;
    font-family: 'Noto Sans', sans-serif;
    font-weight: 600;
}

#user-count-icon {
    width: 12px;
    margin-right: 5px;
    opacity: 0.75;
}

#message-input {
    padding: 12px;
    border: 2px solid rgb(76, 150, 137);
    border-radius: 6px;
    width: 90%;
    outline: none;
    font-family: 'Noto Sans', sans-serif;
}

#message-input:focus {
    border: 2px solid rgb(58, 114, 104);
}

.message-item-contents {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 1px;
    margin-left: 5px;
}

.message-list-item {
    display: flex;
    padding: 10px;
    min-height: 45px;
}

.message-list {
    margin-top: 5px;
    display: flex;
    max-height: 100%;
    flex-direction: column;
    overflow-y: scroll;
}

#num-users {
    margin-left: 30px;
    padding: 5px;
    font-family: 'Noto Sans', sans-serif;
    font-size: 15px;
    color: rgb(65, 128, 116);
}
.message-username {
    font-family: 'Noto Sans', sans-serif; 
    font-weight: 600;
    font-size: 15px;
}

.timestamp {
    margin-left: 8px;
    font-family: 'Noto Sans', sans-serif; 
    font-weight: 400;
    font-size: 12px;
    color: #717274;
}

.message-body {
    font-family: 'Noto Sans', sans-serif; 
    font-size: 15px;
}

.username-timestamps-container {
    display: flex;
    align-items: baseline;
}

